# apps

./: .gitignore  README.md  kde-sc.md5  kf5.md5  kf6.md5
.github/: ISSUE_TEMPLATE.md
0ad/: PKGBUILD  fcollada.patch  gcc14.patch  icu1.68.patch
0ad-data/: PKGBUILD
KaOS_wallpapers/: PKGBUILD
about-distro/: PKGBUILD  PKGBUILD4  kcm-about-distrorc
accounts-qml-module/: PKGBUILD
accountsservice/: PKGBUILD
acetoneiso/: PKGBUILD  acetoneiso.install
ack/: PKGBUILD
akabei/: PKGBUILD  akabei.install
akabeiclient/: PKGBUILD
akonadi/: PKGBUILD
akonadi-calendar/: PKGBUILD
akonadi-calendar-tools/: PKGBUILD
akonadi-calender/: PKGBUILD
akonadi-contacts/: PKGBUILD
akonadi-import-wizard/: PKGBUILD  akonadi-import-wizard.install
akonadi-mime/: PKGBUILD
akonadi-notes/: PKGBUILD
akonadi-search/: PKGBUILD
akonadiconsole/: PKGBUILD
akregator/: PKGBUILD
alkimia/: PKGBUILD
alpm_octopi_utils/: PKGBUILD
amarok/: PKGBUILD  PKGBUILD4  qt5.5.diff
amule/: PKGBUILD  amule.desktop
analitza/: PKGBUILD
android-tools/: PKGBUILD  adbMakefile  fastbootMakefile
angelfish/: PKGBUILD
angelfish6/: PKGBUILD
apper/: PKGBUILD  apper.install  hide-showOriginCB.patch  remove-unavailable-groups.patch
appmenu-gtk-module/: 80-appmenu-gtk-module  PKGBUILD
appmenu-qt/: PKGBUILD  appmenu.diff
appstream/: PKGBUILD  appstream.hook
appstream-glib/: PKGBUILD
aqbanking-qt4/: PKGBUILD
ardour/: PKGBUILD  PKGBUILD_bin  ardour.desktop
aria2/: PKGBUILD
ark/: PKGBUILD  rar.diff
ark6/: PKGBUILD
artikulate/: PKGBUILD
atom/: PKGBUILD  PKGBUILD_compile  atom.desktop
attica/: PKGBUILD
aubio/: PKGBUILD
audacity/: PKGBUILD  PKGBUILD3.2
audiocd-kio/: PKGBUILD
audiothumbs/: PKGBUILD
autoconf2.13/: PKGBUILD
avidemux/: PKGBUILD  bootStrap.diff
avogadro/: PKGBUILD  avogadro-0001-fix-undefined-reference-to-symbol-XInitThreads.patch  boost.patch
avogadro2/: PKGBUILD
avogadrolibs/: PKGBUILD
babe/: PKGBUILD
baloo/: 97-kde-baloo-filewatch-inotify.conf  PKGBUILD  PKGBUILD4  dolphin_db.diff  folderselection.diff
baloo-widgets/: PKGBUILD  PKGBUILD4
baloo-widgets6/: PKGBUILD
baloo6/: PKGBUILD
barrier/: PKGBUILD
bash-langage-server/: PKGBUILD
bashtop/: PKGBUILD
basket/: PKGBUILD
benchmark/: PKGBUILD
bibletime/: PKGBUILD
bitcoin/: PKGBUILD  qt5.15.diff
blender/: PKGBUILD  PKGBUILD_opt  PKGBUILD_orig  blender.desktop
blinken/: PKGBUILD
blogilo/: PKGBUILD
bluedevil/: PKGBUILD  bluezqt5.11.patch
bluedevil6/: PKGBUILD
bluez-qt/: PKGBUILD
bluez-qt6/: PKGBUILD
bovo/: PKGBUILD
bpytop/: PKGBUILD
brackets/: PKGBUILD  brackets.install  libgcrypt.so.11.8.2
breeze/: PKGBUILD  (+1 more)
tribe/tribe-2012.08.04/: CMakeLists.txt  Messages.sh  README  RELEASE_NOTES.html  config-tribe.h.cmake  tribe.desktop
tribe/tribe-2012.08.04/cmake/modules/: FindMarbleWidget.cmake  FindPolkitQt.cmake  FindTribePartitionManager.cmake
tribe/tribe-2012.08.04/data/: all_kde_langpacks  all_kde_langpacks.min  all_locales  all_locales.min  cities.kml  configPageBundleData  configPagePkgData  postinstall.conf  timezones
tribe/tribe-2012.08.04/scripts/: postinstall.sh  postremove.sh  prepare-swap.sh
tribe/tribe-2012.08.04/scripts/postinstall-functions/: helpers  init  job-add-extra-mountpoint  job-cleanup-drivers  job-cleanup-etc  job-cleanup-l10n  job-configure-pacman  job-configure-sudoers  job-configure-users  job-create-fstab  job-create-initrd  job-download-doc  job-download-l10n  job-initialize-target  job-install-grub2  job-pre-install  job-pre-remove  job-rcconf-daemons  job-rcconf-l10n  job-rcconf-network  job-regenerate-locales  job-setup-hardware  job-setup-xorg
tribe/tribe-2012.08.04/translations/: ast.po  ca.po  ca@valencia.po  cs.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  tribe.pot  uk.po  uz.po  zh_CN.po  zh_TW.po
tribe/tribe-2012.08.04/ui/: tribe.qrc  tribe.qss
tribe/tribe-2012.08.04/ui/images/: active-page-anim-18.mng
tribe/tribe-2012.08.04/ui/pages/: base.ui  bootloader.ui  config.ui  finish.ui  init.ui  installation.ui  intro.ui  license.ui  locale.ui  partition.ui  readyinstall.ui  releasenotes.ui  usercreation.ui
tribe/tribe-2012.08.04/ui/widgets/: avatardialog.ui  progresswidget.ui  userwidget.ui
(+2169 files in other folders)
